# miuACP-Tools

./: .gitignore  LICENSE  README.md  cli.py  cli_advanced.py  demo.py  demo_final.py  example.py  pyproject.toml  requirements.txt  run_all_tests.py  run_benchmarks.py  setup.py  test_direct_modules.py  test_full_library.py  test_individual_modules.py  test_integration.py  test_library.py
advanced/: __init__.py  advanced_visualization.py  cli_enhancements.py  connectivity_manager.py  tinyml_integration.py
benchmarks/: __init__.py  latency_benchmark.py  memory_benchmark.py  performance_analyzer.py
hardware/: __init__.py  esp32_tester.py  hardware_validator.py  performance_measurement.py
protocol_analyzer/: __init__.py  benchmarks.py  core.py  models.py  protocols.py  uacp.py  visualization.py
validation/: __init__.py  deployment_tester.py  industry_compliance.py  performance_certifier.py  use_case_validator.py
verification/: __init__.py  model_checker.py  protocol_verification.py  security_verification.py  specification_generator.py
