[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "miuacp-tools"
version = "1.0.1"
description = "µACP Tools: Comprehensive testing, integration, and development suite for the µACP protocol library"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Arnab", email = "hello@arnab.wiki"}
]
maintainers = [
    {name = "Arnab", email = "hello@arnab.wiki"}
]
keywords = [
    "agent", "communication", "protocol", "micro", "lightweight", "edge", "iot",
    "multi-agent", "distributed", "messaging", "pubsub", "rpc", "testing",
    "benchmarking", "analysis", "visualization", "integration", "tools"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Internet :: Name Service (DNS)",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.8"
dependencies = [
    "miuacp>=1.0.1",
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]
full = [
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.urls]
Homepage = "https://github.com/Arnab-m1/miuACP-Tools"
Documentation = "https://github.com/Arnab-m1/miuACP-Tools#readme"
Repository = "https://github.com/Arnab-m1/miuACP-Tools"
"Bug Tracker" = "https://github.com/Arnab-m1/miuACP-Tools/issues"
"Core Library" = "https://github.com/Arnab-m1/miuACP"

[project.scripts]
miuacp-analyze = "cli:analyze"
miuacp-benchmark = "cli:benchmark"
miuacp-compare = "cli:compare"
miuacp-demo = "cli:demo"
miuacp-test = "cli:test_uacp"

[tool.setuptools]
packages = ["protocol_analyzer"]
include-package-data = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["protocol_analyzer"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
    "--cov=protocol_analyzer",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
